# greek-helper

./: .gitignore  LICENSE  README.md  init_db.py  pyproject.toml  run.ps1
src/: main.py  text_scrape.py
src/backend/: database.py  greek_parsing.py  system.py  text_scraper.py
src/interfaces/: SQLLite.py
src/models/: database_models.py  utils.py
src/storage/: sqllite_config.py
src/text/: 1john3.txt  1john4.txt  1john5.txt
src/text/1corinthians/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/text/1john/: 1.txt  2.txt  3.txt  4.txt  5.txt
src/text/1peter/: 1.txt  2.txt  3.txt  4.txt  5.txt
src/text/1thessalonians/: 1.txt  2.txt  3.txt  4.txt  5.txt
src/text/1timothy/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
src/text/2corinthians/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/text/2john/: 1.txt
src/text/2peter/: 1.txt  2.txt  3.txt
src/text/2thessalonians/: 1.txt  2.txt  3.txt
src/text/2timothy/: 1.txt  2.txt  3.txt  4.txt
src/text/3john/: 1.txt
src/text/acts/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/text/colossians/: 1.txt  2.txt  3.txt  4.txt
src/text/ephesians/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
src/text/galatians/: 1.txt  2.txt  3.txt  4.txt  5.txt  (+1 more)
src/views/: flashcard.py  parsed.py  reference.py  songs.py  vocab.py
(+157 files in other folders)
