[tool.poetry]
name = "greek-helper"
version = "0.1.0"
description = ""
authors = ["Shepherd Smith <appliedchristian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^1.4.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
